--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,19 +1,63 @@
-<nav>
-  <a routerLink="/find" routerLinkActive="active">Find Customer</a>
-  <a routerLink="/new" routerLinkActive="active">Add Customer</a>
-  <button *ngIf="(user | async)?.uid" (click)="signOut()"
-    class="btn btn-success">Sign out</button>
-  <button *ngIf="!(user | async)?.uid" (click)="signIn()"
-    class="btn btn-success">Sign in</button>
-</nav>
+<md-sidenav-container class="app-container">
 
-<div *ngIf="!(user | async)?.uid" class="container">
-  <h1>Please sign in.</h1>
-  <div *ngIf="loginPending">Signing in...</div>
-  <!-- <form #loginForm="ngForm" (ngSubmit)="onSubmit()"> -->
-  <button *ngIf="!(user | async)?.uid && !loginPending"
-    (click)="signIn()" class="btn btn-success">Sign in</button>
-  <!-- </form> -->
-</div>
+  <md-toolbar>
+    <button type="button" md-button md-icon-button (click)="sidenav.open()"
+      class="menu-button">
+      <md-icon>menu</md-icon>
+    </button>
+    <span class="spacer"></span>
+    <span>Customers</span>
+    <span class="spacer"></span>
+    <button md-icon-button [mdMenuTriggerFor]="menu">
+      <md-icon>info_outline</md-icon>
+    </button>
+    <md-menu #menu="mdMenu">
+      <button md-menu-item (click)="gotoGithub()">
+        <span>GitHub</span>
+      </button>
+    </md-menu>
+  </md-toolbar>
 
-<router-outlet *ngIf="(user | async)?.uid"></router-outlet>
+  <md-sidenav #sidenav class="sidenav">
+    <md-nav-list>
+      <md-list-item md-button routerLink="/find" routerLinkActive="active"
+        (click)="sidenav.close()">
+        Find
+      </md-list-item>
+      <md-list-item md-button routerLink="/new" routerLinkActive="active"
+        (click)="sidenav.close()">
+        Add
+      </md-list-item>
+      <md-list-item *ngIf="(user | async)?.uid" (click)="signOut(); sidenav.close()">
+        Sign Out
+      </md-list-item>
+      <md-list-item *ngIf="!(user | async)?.uid" (click)="signIn(); sidenav.close()">
+        Sign In
+      </md-list-item>
+    </md-nav-list>
+  </md-sidenav>
+
+  <div class="content">
+
+    <md-card *ngIf="!(user | async)?.uid" class="card">
+      <md-card-header>
+        <md-card-title>Please sign in</md-card-title>
+      </md-card-header>
+      <md-card-content>
+        <span>No credentials required...just click.</span>
+      </md-card-content>
+      <md-card-actions>
+        <button *ngIf="!(user | async)?.uid && !loginPending"
+          (click)="signIn()" type="submit" md-button>
+          Sign In
+        </button>
+        <md-spinner *ngIf="authService.loading" class="spinner-small">
+        </md-spinner>
+      </md-card-actions>
+    </md-card>
+
+    <router-outlet *ngIf="(user | async)?.uid"></router-outlet>
+
+  </div>
+
+</md-sidenav-container>
