--- a/frontend/src/app/new-customer/new-customer.component.html
+++ b/frontend/src/app/new-customer/new-customer.component.html
@@ -1,37 +1,45 @@
-<div class="container">
-  <h1>New Customer</h1>
-  <form #customerForm="ngForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="firstName">First Name</label>
-      <input type="text" class="form-control" id="firstName"
-        required [(ngModel)]="customer.firstName" name=firstName>
-    </div>
-    <div class="form-group">
-      <label for="lastName">Last Name</label>
-      <input type="text" class="form-control" id="lastName"
-        required [(ngModel)]="customer.lastName" name=lastName>
-    </div>
-    <div class="form-group">
-      <label for="idNumber">ID Number</label>
-      <input type="text" class="form-control" id="idNumber"
-        required zaId [(ngModel)]="customer.idNumber" name=idNumber>
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" class="form-control" id="email"
-        required [(ngModel)]="customer.email" name=email>
-    </div>
-    <div class="form-group">
-      <label for="phone">Phone</label>
-      <input type="text" class="form-control" id="phone"
-        required [(ngModel)]="customer.phone" name=phone>
-    </div>
-    <div class="form-group">
-      <label for="address">Address</label>
-      <input type="text" class="form-control" id="address"
-        required [(ngModel)]="customer.address" name=address>
-    </div>
-    <button type="submit" class="btn btn-success">Submit</button>
-    <span>{{ status }}</span>
-  </form>
+<div class="vertical-container">
+<form #customerForm="ngForm" (ngSubmit)="onSubmit()">
+
+  <md-card class="card">
+    <md-card-header>
+      <md-card-title>New Customer</md-card-title>
+    </md-card-header>
+    <md-card-content>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="First Name" [(ngModel)]="customer.firstName"
+          name=firstName>
+      </md-input-container>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="Last Name" [(ngModel)]="customer.lastName"
+          name=lastName>
+      </md-input-container>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="ID Number" [(ngModel)]="customer.idNumber"
+          name=idNumber>
+      </md-input-container>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="Email" [formControl]="emailFormControl"
+          [(ngModel)]="customer.email" name=email>
+        <md-error *ngIf="emailFormControl.hasError('pattern')">
+          Please enter a valid email address
+        </md-error>
+      </md-input-container>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="Phone" [(ngModel)]="customer.phone"
+          name=phone>
+      </md-input-container>
+      <md-input-container class="input-wide">
+        <input mdInput placeholder="Address" [(ngModel)]="customer.address"
+          name=address>
+      </md-input-container>
+      <span>{{ status }}</span>
+    </md-card-content>
+    <md-card-actions>
+      <button type="submit" md-button>Submit</button>
+      <md-spinner *ngIf="loading" class="spinner-small"></md-spinner>
+    </md-card-actions>
+  </md-card>
+
+</form>
 </div>
