--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,68 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+  margin: 0px;
+}
+
+.vertical-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100vw;
+  align-items: center;;
+  justify-content: center;
+  align-content: center;
+}
+
+.search-container-search {
+  min-width: 80%;
+  padding-top: 18px;
+}
+
+.search-container-result {
+  width: 100%;
+}
+
+
+.app-container {
+  width: 100%;
+  height: 100vh;
+}
+
+.content {
+  display: flex;
+  height: 100%;
+  align-items: flex-start;
+  justify-content: center;
+  align-content: stretch;
+}
+
+.sidenav {
+  padding: 20px;
+  min-width: 10vw;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.card {
+  margin: 8px;
+}
+
+.input-wide {
+  width: 100%;
+}
+
+.input-medium {
+  min-width: 40%;
+}
+
+md-spinner.spinner-small {
+  height: 30px;
+  width: 30px;
+  float: right;
+  padding-right: 16px;
+}
